--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
     "babel-loader": "^8.2.3",
     "cache-loader": "^4.1.0",
     "css-loader": "3.6.0",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-vue": "^8.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "4.5.2",
     "less": "^4.1.2",
     "less-loader": "7.3.0",
     "mini-css-extract-plugin": "1.6.2",
+    "postcss": "8.0.1",
     "postcss-loader": "4.3.0",
     "postcss-pxtorem": "5.1.1",
     "sass": "^1.45.1",
