--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "analyz": "NODE_ENV=production npm_config_report=true npm run build:dev",
     "build:dev": "npm run clean && webpack ./src/main.js --mode development",
     "build:pro": "webpack --config ./build/webpack.prod.js",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "prepare": "husky install"
   },
   "dependencies": {
     "vue": "^2.6.14",
@@ -33,6 +34,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "4.5.2",
+    "husky": "^7.0.4",
     "less": "^4.1.2",
     "less-loader": "7.3.0",
     "mini-css-extract-plugin": "1.6.2",
