--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --mode development",
     "dev": "webpack-dev-server --open --port 3000 --hot",
     "serve": "webpack-dev-server --config ./build/webpack.dev.js",
     "analyz": "NODE_ENV=production npm_config_report=true npm run build:dev",
