--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 node_modules
 /dist
-
+/test
 
 # local env files
 .env.local
@@ -12,6 +12,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+selenium-debug.log*
 
 # Editor directories and files
 .idea
@@ -20,4 +21,6 @@ pnpm-debug.log*
 *.ntvs*
 *.njsproj
 *.sln
+*.iml
 *.sw?
+*.zip
