--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "js-cookie": "^3.0.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "wxl-ui": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
