feat:配置 webpack 多环境打包, 优化启动日志输出

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "dev": "webpack-dev-server --open --port 3000 --hot",
+    "dev": "webpack-dev-server --progress --open --port 3000 --hot --config build/webpack.dev.conf.js",
     "serve": "webpack-dev-server --config ./build/webpack.dev.js",
     "analyz": "NODE_ENV=production npm_config_report=true npm run build:dev",
-    "build": "npm run build:dev",
+    "build": "node build/build.js",
+    "build:npm": "npm run build:dev",
     "build:dev": "npm run clean && webpack ./src/main.js --mode development",
     "build:pro": "webpack --config ./build/webpack.prod.js",
     "clean": "rimraf dist",
@@ -27,9 +28,13 @@
     "@babel/core": "^7.16.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.5",
+    "@intervolga/optimize-cssnano-plugin": "^1.0.6",
     "autoprefixer": "9.8.8",
     "babel-loader": "^8.2.3",
     "cache-loader": "^4.1.0",
+    "chalk": "^4.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^6.0.0",
     "css-loader": "3.6.0",
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -41,9 +46,11 @@
     "less": "^4.1.2",
     "less-loader": "7.3.0",
     "mini-css-extract-plugin": "1.6.2",
+    "ora": "^5.1.0",
     "postcss": "8.0.1",
     "postcss-loader": "4.3.0",
     "postcss-pxtorem": "5.1.1",
+    "rimraf": "^3.0.2",
     "sass": "^1.45.1",
     "sass-loader": "10.2.0",
     "style-loader": "2.0.0",
@@ -53,7 +60,8 @@
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack-dev-server": "^4.6.0",
+    "webpack-merge": "^5.8.0"
   },
   "browserslist": [
     "> 1%",
