--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0",
-    "wxl-ui": "^1.0.0"
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
