--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "vue2.x",
+  "name": "vue2.x-webpack4",
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "license": "MIT",
+  "exports": {
+    "./*": "./*"
+  },
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "dev": "webpack-dev-server --progress --open --port 3000 --hot --config build/webpack.dev.conf.js",
-    "serve": "webpack-dev-server --config ./build/webpack.dev.js",
+    "dev": "webpack-dev-server --progress --hot --config build/webpack.dev.conf.js",
     "analyz": "NODE_ENV=production npm_config_report=true npm run build:dev",
-    "build": "node build/build.js",
+    "build": "npm run clean && node build/build.js",
     "build:npm": "npm run build:dev",
     "build:dev": "npm run clean && webpack ./src/main.js --mode development",
     "build:pro": "webpack --config ./build/webpack.prod.js",
@@ -17,7 +19,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
+    "js-md5": "^0.7.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2",
@@ -40,15 +44,18 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.2.0",
     "file-loader": "^6.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "4.5.2",
     "husky": "^7.0.4",
     "less": "^4.1.2",
     "less-loader": "7.3.0",
     "mini-css-extract-plugin": "1.6.2",
+    "node-notifier": "^10.0.1",
     "ora": "^5.1.0",
-    "postcss": "8.0.1",
+    "postcss": "^8.0.1",
     "postcss-loader": "4.3.0",
-    "postcss-pxtorem": "5.1.1",
+    "postcss-plugin-px2rem": "^0.8.1",
+    "qs": "^6.10.3",
     "rimraf": "^3.0.2",
     "sass": "^1.45.1",
     "sass-loader": "10.2.0",
@@ -59,7 +66,7 @@
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
+    "webpack-dev-server": "^4.9.0",
     "webpack-merge": "^5.8.0"
   },
   "browserslist": [
